refactor: training test #57